grml-live (0.9.9) unstable; urgency=low

  * Update to kernel 2.6.28-grml[64].
  * Drop package tspc from GRML_FULL (see #462738 and #515193)
  * Add mc to GRML_MEDIUM (on request by Christian Kuehlborn).
  * Document noautoconfig in grml-cheatcodes. Thanks to Ralf Moll!

 -- Michael Prokop <mika@grml.org>  Thu, 19 Feb 2009 19:14:14 +0100

grml-live (0.9.8) unstable; urgency=low

  * Improve help text of the release option in usage info.
  * Drop fblog from GRML_FULL (obsolete with 2.6 kernels, #427139).
  * Add libcap2-bin to GRML_FULL.
  * Upgrade isolinux.bin to version from syslinux-common 2:3.73+dfsg-1.
    [Testing: issue569]
  * Integrate /etc/grml/fai/config/scripts/GRMLBASE/18-timesetup to
    improve UTC handling. Thanks for the script, Thomas Lehmann!

 -- Michael Prokop <mika@grml.org>  Thu, 12 Feb 2009 14:20:39 +0100

grml-live (0.9.7) unstable; urgency=low

  * Add packages to GRML_FULL:
    - aiccu (thanks, Christian Vogel)
    - genext2fs
    - radvd (thanks, Christian Vogel)
    - tf (thanks, Rhonda)
  * Add genext2fs to GRML_MEDIUM (for use within live-snapshot).
  * Support execution without touching the chroot at all using option "-B".
    Thanks for the patch, Jimmy.
  * Update current state section of documentation.
  * Update cheatcode documentation (thanks to Moritz Augsburger).
  * Drop cryopid from GRML_FULL, see #507882.

 -- Michael Prokop <mika@grml.org>  Fri, 12 Dec 2008 12:17:35 +0100

grml-live (0.9.6) unstable; urgency=low

  * Add new packages to GRML_FULL:
    - cciss-vol-status (HP SmartArray RAID Volume Status Checker)
    - dwdiff (front-end for the diff program that operates word by word)
    - espeakup (connector between espeak and speakup)
    - faketime (report faked system time to programs)
    - fcoretools (Tools to advise the IO scheduler)
    - latencytop (A tool for developers to visualize system latencies)
    - qiv (A quick image viewer for X)
    - speakup-modules-2.6.26-grml64 (support speakup on amd64 as well)