@@ -2,10 +2,10 @@
 
 # settings for grml_live_run:
 DATE=$(date +%Y%m%d)
-ISO_NAME=grml-medium_etch_$DATE.iso
-SUITE=sid
-CLASSES='GRMLBASE,GRML_MEDIUM,RELEASE,I386'
-NAME=grml-medium
+ISO_NAME=grml_lenny_$DATE.iso
+SUITE=lenny
+CLASSES='GRMLBASE,GRML_FULL,LATEX_CLEANUP,RELEASE,I386'
+NAME=grml
 SCRIPTNAME="$(basename $0)"
 ARCH=i386
 
