@@ -2,17 +2,17 @@
 
 # settings for grml_live_run:
 DATE=$(date +%Y%m%d)
-ISO_NAME=grml64_etch_$DATE.iso
-SUITE=etch
-CLASSES='GRMLBASE,GRML_FULL,LATEX_CLEANUP,RELEASE,AMD64'
-NAME=grml64
+ISO_NAME=grml64-small_lenny_$DATE.iso
+SUITE=lenny
+CLASSES='GRMLBASE,GRML_SMALL,REMOVE_DOCS,RELEASE,AMD64'
+NAME=grml64-small
 SCRIPTNAME="$(basename $0)"
 ARCH=amd64
 
 . /usr/share/grml-live/buildd/functions.sh || exit 1
 
 # execute grml-live:
-grml_live_run
+grml_live_run -z
 
 # create_logs
 upload_logs
@@ -23,8 +23,4 @@ send_mail
 
 store_iso
 
-if [ "$RC" = "0" ] ; then
-   bailout
-else
-   echo "building ISO failed, keeping build files [${OUTPUT_DIR}]"
-fi
+bailout
